# gemini_enterprise_adk_sales_agent

./: .env.example  .gitignore  README.md  deploy.sh  main.py  pyproject.toml  run_agent.py  test_agent_connection.py  test_deployed_agent.py  test_single_query.py
sales_agent/: .ae_ignore  agent.py  config.py  requirements.txt  tools.py
tests/: test_complex_joins.py  test_deployed_agent.py  test_single_query.py  test_tools.py
